Website/css/styles.css
/*===== GOOGLE FONTS =====*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
/*===== VARIABLES CSS =====*/
:root{ 
  --header-height: 3rem;
  --nav-width: 324px; 


  /*===== Font weight =====*/
  --font-medium: 500;
  --font-semi-bold: 600;
  --font-bold: 700;

  /*===== Colors =====*/
  --hue-color: 250;
  --first-color: #CC4B2C;
  --first-color-dark: #662616; 
  --first-color-darken: #290F09; 
  --text-color: #54423d; 
  --first-color-light: #EAE7E6; 
  --first-color-lighten: #FFFAFA;
  --first-transparent-color: rgba(204, 75, 44, .7);

/* ======= DARK THEME STUFF ====*/

  /*===== Font and typography =====*/
  --body-font: 'Poppins', sans-serif;
  --h1-font-size: 1.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1rem;
  --bigger-font-size: 1rem;
  --normal-font-size: .938rem;
  --small-font-size: .813rem;
  --smaller-font-size: .75rem;
  --smallest-font-size: .65rem;

  /*===== Margins =====*/
  --mb-1: .5rem; 
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;

  /*===== z index =====*/
  --z-fixed: 100;
}

@media screen and (min-width: 768px){
  :root{
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: .875rem;
    --smaller-font-size: .813rem;
  }
}

/*===== BASE =====*/
*, ::before, ::after{
  box-sizing: border-box;
}

html{
  scroll-behavior: smooth;
}

body{
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
  background-color: var(--first-color-lighten);
  color: var(--text-color);
  line-height: 1.6;
  width: 100%;
}

h1,h2,h3,p{
  margin: 0;
}

h3{
  font-weight: var(--font-semi-bold);
}

ul{
  margin: 0;
  padding: 0;
  list-style: none;
}

a{
  text-decoration: none;
  color: var(--text-color);
}

img{
  max-width: 100%;
  height: auto;
  display: block;
}

/*===== CLASS CSS ===== */
.section{
  padding: 4rem 0 2rem;
}

.section-title{
  font-size: var(--h1-font-size);
  color: var(--first-color);
  margin-bottom: var(--mb-3);
  text-align: center;
}

.section-subtitle{
  display: block;
  font-size: var(--small-font-size);
  color: var(--first-color-darken);
  text-align: center;
  font-weight: var(--font-bold);
  margin-bottom: .25rem;
}

/*===== LAYOUT =====*/
.bd-grid{
  max-width: 1024px;
  display: grid;
  grid-template-columns: 100%;
  column-gap: 2rem;
  width: calc(100% -2rem);
  margin-left: var(--mb-2);
  margin-right: var(--mb-2);
}

.l-header{
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--first-color-lighten);
  box-shadow: 0 2px 4px rgba(0,0,0,.1);
}

/*===== NAV =====*/
.nav{
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav__menu{
  position: fixed;
  top: 0;
  left: -100%;
  width: 90%;
  height: 100vh;
  padding: 3rem;
  display: flex;
  align-items: center;
  background-color: var(--first-color);
  transition: .5s;
}

.nav__close{
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 2rem;
  color: var(--first-color-dark);
  cursor: pointer;
}

.nav__item{
  margin-bottom: var(--mb-4);
}

.nav__link{
  font-size: 1rem;
  text-transform: uppercase;
  color: var(--first-color-lighten);
  font-weight: var(--font-bold);
  transition: .3s;
}

.nav__link:hover{
  color: var(--text-color);
}

.nav__toggle{
  color: var(--first-color-dark);
  font-size: 1.3rem;
  cursor: pointer;
}

/*=== Show menu ===*/
.show{
  left: 0;
}

/*Active menu*/
.active{
  color: var(--text-color);
}

/*===== HOME =====*/
.home__container{
  height: calc(100vh - var(--header-height));
  align-items: center;
}

.home__data{
  display: flex;
  flex-direction: column;
  align-items: center;
  height: max-content;
  text-align: center;
}

.home__img{
  padding-top: 1.2rem;
  padding-left: 0.6rem;
  width: 160px;
  height: 160px;
  background-color: var(--first-color);
  border-radius: 50%;
  overflow: hidden;
  margin-bottom: var(--mb-2);
  margin-top: var(--mb-5);
}

.home__img img{
  width: 155px;
}

.home__title{
  font-size: var(--h1-font-size);
  columns: var(--first-color);
  font-weight: var(--font-semi-bold);
}

.home__profession{
  font-size: var(--small-font-size);
  color: var(--first-color-dark);
  margin-bottom: var(--mb-5);
}

.home__social{
  margin-bottom: 5rem;
}

.home__social-link{
  display: inline-flex;
  background-color: var(--first-color);
  color: var(--first-color-lighten);
  font-size: 1.1rem;
  border-radius: 50%;
  padding: .40rem;
  margin: 0 var(--mb-1);
  transition: .3s;
}

.home__social-link:hover{
  background-color: var(--first-color-dark);
}

.home__button{
  width: 100%;
}

/*BUTTONS*/
.button{
  display: inline-block;
  background-color: var(--first-color);
  color: var(--first-color-lighten);
  padding: 1rem 2rem;
  font-weight: var(--font-semi-bold);
  border-radius: .5rem;
  transition: .3s;
}

.button:hover{
  background-color: var(--first-color-dark);
}

.button__light{
  background-color: var(--first-color-lighten);
  color: var(--first-color);
}

.button__light:hover{
  color: var(--first-color-lighten);
}

/* ===== ABOUT =====*/
.about__container{
  row-gap: 2rem;
}

.about__data{
  text-align: center;
}

.about__description{
  margin-bottom: var(--mb-4);
}

.about__img{
  width: 150px;
  border-radius: .5rem;
  margin: 0 auto;
}


.about__information{
  margin-bottom: var(--mb-4);
}

.about__information-title{
  font-size: var(--h3-font-size);
  color: var(--first-color-dark);
  margin-bottom: var(--mb-2);
}

.about__information-data{
  display: flex;
  align-items: center;
  padding-left: 1.5rem;
  margin-bottom: var(--mb-3);
}

.about__information-icon{
  font-size: 1.5rem;
  color: var(--first-color);
  margin-right: var(--mb-4);
}

.about__information-subtitle{
  display: block;
  font-weight: var(--font-semi-bold);
}
/* ... */

